--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div>
+            <div></div>
+        </div>
+        <div>
+            <div>AC</div>
+            <div>DEL</div>
+            <div>%</div>
+            <div>+</div>
+        </div>
+        <div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>x</div>
+        </div>
+        <div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>/</div>
+        </div>
+        <div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>-</div>
+        </div>
+        <div>
+            <div>0</div>
+            <div>.</div>
+            <div>=</div>
+        </div>
+    </section>
     
 </body>
 </html>
