Draft design calculator outlook

--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 </head>
 <body>
     <section>
-        <div>
-            <div></div>
+        <div class="column">
+            <div>12345</div>
         </div>
-        <div>
-            <div>AC</div>
-            <div>DEL</div>
-            <div>%</div>
-            <div>+</div>
+        <div class="column">
+            <div class="row">AC</div>
+            <div class="row">DEL</div>
+            <div class="row">%</div>
+            <div class="row">+</div>
         </div>
-        <div>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>x</div>
+        <div class="column">
+            <div class="row">1</div>
+            <div class="row">2</div>
+            <div class="row">3</div>
+            <div class="row">x</div>
         </div>
-        <div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>/</div>
+        <div class="column">
+            <div class="row">4</div>
+            <div class="row">5</div>
+            <div class="row">6</div>
+            <div class="row">/</div>
         </div>
-        <div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
-            <div>-</div>
+        <div class="column">
+            <div class="row">7</div>
+            <div class="row">8</div>
+            <div class="row">9</div>
+            <div class="row">-</div>
         </div>
-        <div>
-            <div>0</div>
-            <div>.</div>
-            <div>=</div>
+        <div class="column">
+            <div class="row">0</div>
+            <div class="row">.</div>
+            <div class="row" id="big">=</div>
         </div>
     </section>
     
