Change to buttons and add shadow

--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 </head>
 <body>
     <section>
-        <div class="column">
-            <div>12345</div>
+        <div class="column" id="screen">
+            <div >12345</div>
         </div>
         <div class="column">
-            <div class="row">AC</div>
-            <div class="row">DEL</div>
-            <div class="row">%</div>
-            <div class="row">+</div>
+            <button class="row">AC</button>
+            <button class="row">DEL</button>
+            <button class="row">%</button>
+            <button class="row">+</button>
         </div>
         <div class="column">
-            <div class="row">1</div>
-            <div class="row">2</div>
-            <div class="row">3</div>
-            <div class="row">x</div>
+            <button class="row">7</button>
+            <button class="row">8</button>
+            <button class="row">9</button>
+            <button class="row">*</button>
         </div>
         <div class="column">
-            <div class="row">4</div>
-            <div class="row">5</div>
-            <div class="row">6</div>
-            <div class="row">/</div>
+            <button class="row">4</button>
+            <button class="row">5</button>
+            <button class="row">6</button>
+            <button class="row">/</button>
         </div>
         <div class="column">
-            <div class="row">7</div>
-            <div class="row">8</div>
-            <div class="row">9</div>
-            <div class="row">-</div>
+            <button class="row">1</button>
+            <button class="row">2</button>
+            <button class="row">3</button>
+            <button class="row">-</button>
         </div>
         <div class="column">
-            <div class="row">0</div>
-            <div class="row">.</div>
-            <div class="row" id="big">=</div>
+            <button class="row">0</button>
+            <button class="row">.</button>
+            <button class="row" id="big">=</button>
         </div>
     </section>
     
