Display one number on screen when pressed.

--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <body>
     <section>
         <div class="column" id="screen">
-            <div >12345</div>
+            <div id="numbers"></div>
         </div>
         <div class="column">
-            <button class="row">AC</button>
-            <button class="row">DEL</button>
-            <button class="row">%</button>
-            <button class="row">+</button>
+            <button class="row" id="ac">AC</button>
+            <button class="row" id="del">DEL</button>
+            <button class="row" id="percent">%</button>
+            <button class="row" id="plus">+</button>
         </div>
         <div class="column">
-            <button class="row">7</button>
-            <button class="row">8</button>
-            <button class="row">9</button>
-            <button class="row">*</button>
+            <button class="row" id="seven">7</button>
+            <button class="row" id="eight">8</button>
+            <button class="row" id="nine">9</button>
+            <button class="row" id="grow">*</button>
         </div>
         <div class="column">
-            <button class="row">4</button>
-            <button class="row">5</button>
-            <button class="row">6</button>
-            <button class="row">/</button>
+            <button class="row" id="four">4</button>
+            <button class="row" id="five">5</button>
+            <button class="row" id="six">6</button>
+            <button class="row" id="split">/</button>
         </div>
         <div class="column">
-            <button class="row">1</button>
-            <button class="row">2</button>
-            <button class="row">3</button>
-            <button class="row">-</button>
+            <button class="row" id="one">1</button>
+            <button class="row" id="two">2</button>
+            <button class="row" id="three">3</button>
+            <button class="row" id="dash">-</button>
         </div>
         <div class="column">
-            <button class="row">0</button>
-            <button class="row">.</button>
+            <button class="row" id="zero">0</button>
+            <button class="row" id="dot">.</button>
             <button class="row" id="big">=</button>
         </div>
     </section>
