Shorten line of code for display numbers

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <button class="row" id="plus">+</button>
         </div>
         <div class="column">
-            <button class="row" id="seven">7</button>
-            <button class="row" id="eight">8</button>
-            <button class="row" id="nine">9</button>
+            <button class="num" data-number="7">7</button>
+            <button class="num" data-number="8">8</button>
+            <button class="num" data-number="9">9</button>
             <button class="row" id="grow">*</button>
         </div>
         <div class="column">
-            <button class="row" id="four">4</button>
-            <button class="row" id="five">5</button>
-            <button class="row" id="six">6</button>
+            <button class="num" data-number="4">4</button>
+            <button class="num" data-number="5">5</button>
+            <button class="num" data-number="6">6</button>
             <button class="row" id="split">/</button>
         </div>
         <div class="column">
-            <button class="row" id="one">1</button>
-            <button class="row" id="two">2</button>
-            <button class="row" id="three">3</button>
+            <button class="num" data-number="1">1</button>
+            <button class="num" data-number="2">2</button>
+            <button class="num" data-number="3">3</button>
             <button class="row" id="dash">-</button>
         </div>
         <div class="column">
-            <button class="row" id="zero">0</button>
+            <button class="num" data-number="0">0</button>
             <button class="row" id="dot">.</button>
             <button class="row" id="big">=</button>
         </div>
